--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header></app-header>
-<app-subject></app-subject>
+<!-- <app-subject></app-subject> -->
+<app-replay-subject></app-replay-subject>
